--- a/css/input.css
+++ b/css/input.css
@@ -10,6 +10,6 @@
 
 .calculator{
     background-color: #08AEEA;
-    background-image: linear-gradient(0deg, #08AEEA 0%, #2AF598 100%);
+    /* background-image: linear-gradient(0deg, #08AEEA 0%, #2AF598 100%); */
     border: 1px solid white;
 }
